--- a/lams_bb_integration/.classpath
+++ b/lams_bb_integration/.classpath
@@ -7,14 +7,15 @@
 	<classpathentry kind="lib" path="lib/bb-platform.jar"/>
 	<classpathentry kind="lib" path="lib/bb-taglibs.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/axis.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/axis-ant.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/commons-discovery-0.2.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/jaxrpc.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/saaj.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/wsdl4j-1.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/bb-cms-admin.jar"/>
+	<classpathentry kind="lib" path="lib/axis.jar"/>
+	<classpathentry kind="lib" path="lib/axis-ant.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-discovery-0.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/jaxrpc.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.8.jar"/>
+	<classpathentry kind="lib" path="lib/saaj.jar"/>
+	<classpathentry kind="lib" path="lib/wsdl4j-1.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
