--- a/lams_bb_integration/build.xml
+++ b/lams_bb_integration/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project default="package" name="LAMS/Blackboard Plugin" basedir="./">
 	<property name="project" value="BlackboardPlugin"/>
-	<property name="product" value="lams-bb-plugin"/>
+	<property name="product" value="lams2-bb-plugin"/>
 	<property name="version" value="1.0"/>
 
 	<property name="build" value="${basedir}/build"/>
