LDEV-2896 Improved lesson creation page and added gradebook support

--- a/lams_bb_integration/WEB-INF/web.xml
+++ b/lams_bb_integration/WEB-INF/web.xml
@@ -13,6 +13,10 @@
     <servlet-name>LamsActionRequestServlet</servlet-name>
     <servlet-class>org.lamsfoundation.ld.integration.blackboard.LamsActionRequestServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>GradebookServlet</servlet-name>
+    <servlet-class>org.lamsfoundation.ld.integration.blackboard.GradebookServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>LamsActionRequestServlet</servlet-name>
@@ -22,6 +26,9 @@
     <servlet-name>UserDataServlet</servlet-name>
     <url-pattern>/UserData</url-pattern>
   </servlet-mapping>
- 
+  <servlet-mapping>
+    <servlet-name>GradebookServlet</servlet-name>
+    <url-pattern>/Gradebook</url-pattern>
+  </servlet-mapping> 
  
 </web-app>
