--- a/lams_bb_integration/build.xml
+++ b/lams_bb_integration/build.xml
@@ -2,7 +2,7 @@
 <project default="package" name="LAMS/Blackboard Plugin" basedir="./">
 	<property name="project" value="BlackboardPlugin"/>
 	<property name="product" value="lams2-bb-plugin"/>
-	<property name="version" value="1.2.5"/>
+	<property name="version" value="1.2.6"/>
 
 	<property name="build" value="${basedir}/build"/>
 	<property name="build.classes" value="${build}/classes"/>
@@ -53,6 +53,7 @@
 		</javac>
 		<jar jarfile="${build.lib}/${product}-${version}.jar">
 			<fileset dir="${build.classes}" />
+			<fileset dir="${basedir}/conf" includes="main.properties"/>
 		</jar>
 	</target>
 	
