LDEV-3424 Add new feature to integrations to be able to sync all marks in the lesson

--- a/lams_bb_integration/WEB-INF/web.xml
+++ b/lams_bb_integration/WEB-INF/web.xml
@@ -17,6 +17,10 @@
     <servlet-name>GradebookServlet</servlet-name>
     <servlet-class>org.lamsfoundation.ld.integration.blackboard.GradebookServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>GradebookSyncServlet</servlet-name>
+    <servlet-class>org.lamsfoundation.ld.integration.blackboard.GradebookSyncServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>LamsLearningDesignServlet</servlet-name>
@@ -30,5 +34,9 @@
     <servlet-name>GradebookServlet</servlet-name>
     <url-pattern>/Gradebook</url-pattern>
   </servlet-mapping> 
+  <servlet-mapping>
+    <servlet-name>GradebookSyncServlet</servlet-name>
+    <url-pattern>/GradebookSync</url-pattern>
+  </servlet-mapping>   
  
 </web-app>
