LDEV-3484: Implementing StartLesson as a servlet, with a JSON response.

--- a/lams_bb_integration/WEB-INF/web.xml
+++ b/lams_bb_integration/WEB-INF/web.xml
@@ -29,6 +29,11 @@
     <servlet-name>RenderDesignImageServlet</servlet-name>
     <servlet-class>org.lamsfoundation.ld.integration.blackboard.RenderDesignImageServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>StartLessonServlet</servlet-name>
+    <servlet-class>org.lamsfoundation.ld.integration.blackboard.StartLessonServlet</servlet-class>
+  </servlet>
+  
 
   <servlet-mapping>
     <servlet-name>LamsLearningDesignServlet</servlet-name>
@@ -54,4 +59,9 @@
     <servlet-name>RenderDesignImageServlet</servlet-name>
     <url-pattern>/RenderImage</url-pattern>
   </servlet-mapping>   
+    <servlet-mapping>
+    <servlet-name>StartLessonServlet</servlet-name>
+    <url-pattern>/StartLesson</url-pattern>
+  </servlet-mapping>   
+  
 </web-app>
