--- a/lams_bb_integration/build.xml
+++ b/lams_bb_integration/build.xml
@@ -2,7 +2,7 @@
 <project default="package" name="LAMS/Blackboard Plugin" basedir="./">
 	<property name="project" value="BlackboardPlugin"/>
 	<property name="product" value="lams2-bb-plugin"/>
-	<property name="version" value="1.2.17"/>
+	<property name="version" value="1.2.18"/>
 
 	<property name="build" value="${basedir}/build"/>
 	<property name="build.classes" value="${build}/classes"/>
@@ -66,6 +66,24 @@
   				<exclude name="web.xml"/>
   			</webinf>
   			<fileset dir="${web}" />
+		  	<lib dir="${build.lib}">
+		    	<include name="*.jar"/>
+		  	</lib>
+  		</war>
+  	</target>
+	
+	<!-- ================================================================ -->
+	<!-- making the war packages for deployment			    	          -->
+	<!-- ================================================================ -->
+	<target name="package-additional" depends="compile" description="creates war file that adds support for copying courses">
+  		<war warfile="${build}/lams-course-copy-${version}.war" 
+  				webxml="${basedir}/conf/lams-course-copy/web.xml">
+  			<webinf dir="${basedir}/conf/lams-course-copy/">
+  				<exclude name="web.xml"/>
+  			</webinf>
+  			<classes dir="${build.classes}">
+  				<include name="**/CxComponentImpl.class"/>
+  			</classes>
 		  	<lib dir="${build.lib}">
 		    	<include name="*.jar"/>
 		  	</lib>
