LDEV-3669:Fix for Wiki date/time restriction in monitor.

--- a/lams_tool_wiki/build.properties
+++ b/lams_tool_wiki/build.properties
@@ -3,5 +3,6 @@ min.server.version.number=2.0
 
 signature=lawiki10
 tool.version=20120315
+tool.version=20160919
 tool.hide=false
 tool.short.name=wiki
