LDEV-3997 LTI 1.1: updated httpclient to 4.2.3 version, added new libraries required to verify OAuth signature and util classes for LTI

--- a/lams_build/build.xml
+++ b/lams_build/build.xml
@@ -185,6 +185,7 @@
 				<include name="aspirin/*.jar" />
 				<include name="autopatch/*.jar" />
 				<include name="axis/*.jar" />
+				<include name="basiclti-util/*.jar" />
 				<include name="batik/*.jar" />
 				<include name="cglib/*.jar" />
 				<include name="fckeditor/*.jar" />
