--- a/lams_common/.classpath
+++ b/lams_common/.classpath
@@ -43,7 +43,7 @@
 	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/org/apache/commons/codec/main/commons-codec-1.9.jar"/>
 	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/io/undertow/core/main/undertow-core-1.1.8.Final.jar" sourcepath="/3RDPARTY_SOURCES_PROJECT/undertow"/>
 	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/io/undertow/servlet/main/undertow-servlet-1.1.8.Final.jar" sourcepath="/3RDPARTY_SOURCES_PROJECT/undertow"/>
-	<classpathentry kind="lib" path="/lams_build/lib/lams/lams-gradebook.jar"/>
+	<classpathentry kind="lib" path="/lams_build/lib/lams/lams-gradebook.jar" sourcepath="/lams_gradebook"/>
 	<classpathentry kind="output" path="bin"/>
 	<referencedentry kind="lib" path="/lams_build/lib/lams/lams.jar" sourcepath=""/>
 </classpath>
