LDEV-3774: Restoring the effectiveness of the height setting. Now the height setting is used to set min-height in ckconfig_custom.js

--- a/lams_tool_laqa/.classpath
+++ b/lams_tool_laqa/.classpath
@@ -25,4 +25,5 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/javax/mail/api/main/javax.mail-1.5.1.jar"/>
 </classpath>
