--- a/lams_tool_forum/.classpath
+++ b/lams_tool_forum/.classpath
@@ -10,7 +10,7 @@
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/lams_common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lams_contentrepository"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/lams_central"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/lams_central.old"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/lams_learning"/>
 	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/org/hibernate/main/hibernate-core-4.3.7.Final.jar" sourcepath="/3RDPARTY_SOURCES_PROJECT/hibernate-core">
 		<attributes>
