LDEV-4036 Readjust thickbox so it doesn't have extra scrolls * Also made Thickbox to always use default values for width:90% and height:100%. In case when these values should be different, one can provide width and height values as parameters

--- a/lams_tool_imscc/build.properties
+++ b/lams_tool_imscc/build.properties
@@ -3,5 +3,5 @@ min.server.version.number=2.0
 
 signature=laimsc11
 tool.version=20110511
-tool.hide=true
+tool.hide=false
 tool.short.name=commonCartridge
