--- a/lams_gradebook/.classpath
+++ b/lams_gradebook/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="javadoc_location" value="http://commons.apache.org/proper/commons-lang/javadocs/api-2.6/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/lams_learning/build/lib/lams-learning.jar"/>
 	<classpathentry kind="output" path="bin"/>
-</classpath> 
+</classpath>
