--- a/lams_bb_integration/.classpath
+++ b/lams_bb_integration/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.8.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
