LDEV-4196 Create document collaboration tool

--- a/lams_build/build.xml
+++ b/lams_build/build.xml
@@ -67,6 +67,7 @@
 		<ant antfile="../lams_tool_bbb/build.xml"           target="_clean-dirs" inheritAll="false"/>
 		<ant antfile="../lams_tool_chat/build.xml"          target="_clean-dirs" inheritAll="false"/>
 		<ant antfile="../lams_tool_daco/build.xml"          target="_clean-dirs" inheritAll="false"/>
+		<ant antfile="../lams_tool_doku/build.xml"          target="_clean-dirs" inheritAll="false"/>
 		<ant antfile="../lams_tool_forum/build.xml"         target="_clean-dirs" inheritAll="false"/>
 		<ant antfile="../lams_tool_gmap/build.xml"          target="_clean-dirs" inheritAll="false"/>
 		<ant antfile="../lams_tool_images/build.xml"        target="_clean-dirs" inheritAll="false"/>
@@ -109,6 +110,7 @@
 		<ant antfile="../lams_tool_bbb/build.xml"           target="copy-tags" inheritAll="false"/>
 		<ant antfile="../lams_tool_chat/build.xml"          target="copy-tags" inheritAll="false"/>
 		<ant antfile="../lams_tool_daco/build.xml"          target="copy-tags" inheritAll="false"/>
+		<ant antfile="../lams_tool_doku/build.xml"          target="copy-tags" inheritAll="false"/>
 		<ant antfile="../lams_tool_forum/build.xml"         target="copy-tags" inheritAll="false"/>
 		<ant antfile="../lams_tool_gmap/build.xml"          target="copy-tags" inheritAll="false"/>
 		<ant antfile="../lams_tool_images/build.xml"        target="copy-tags" inheritAll="false"/>
@@ -285,6 +287,7 @@
 		<ant antfile="../lams_tool_bbb/build.xml"           target="deploy-tool" inheritAll="false" />
 		<ant antfile="../lams_tool_chat/build.xml"          target="deploy-tool" inheritAll="false" />
 		<ant antfile="../lams_tool_daco/build.xml"          target="deploy-tool" inheritAll="false" />
+		<ant antfile="../lams_tool_doku/build.xml"          target="deploy-tool" inheritAll="false" />
 		<ant antfile="../lams_tool_forum/build.xml"         target="deploy-tool" inheritAll="false" />
 		<ant antfile="../lams_tool_gmap/build.xml"          target="deploy-tool" inheritAll="false" />
 		<ant antfile="../lams_tool_images/build.xml"        target="deploy-tool" inheritAll="false" />
@@ -533,7 +536,7 @@
 		</copy>
 		<copy tofile="${server.home}/modules/system/layers/base/org/scilab/forge/jlatexmath/main/module.xml"
 			  file="lib/jlatexmath/jlatexmath.module.xml" overwrite="true" verbose="true" />
-
+		
 		
 		
 		<copy todir="${server.home}/modules/system/layers/base/com/google/gson/main" overwrite="true" verbose="true">
@@ -543,6 +546,16 @@
 		</copy>
 		<copy tofile="${server.home}/modules/system/layers/base/com/google/gson/main/module.xml"
 			  file="lib/json/gson.module.xml" overwrite="true" verbose="true" />
+
+		
+		
+		<copy todir="${server.home}/modules/system/layers/base/org/json/simple/main" overwrite="true" verbose="true">
+			<fileset dir="lib/json">
+				<include name="json-simple-*.jar" />
+			</fileset>
+		</copy>
+		<copy tofile="${server.home}/modules/system/layers/base/org/json/simple/main/module.xml"
+			  file="lib/json/json-simple.module.xml" overwrite="true" verbose="true" />
 		
 		
 		
@@ -725,6 +738,7 @@
 		<ant antfile="../lams_tool_bbb/build.xml"           target="explode-war" inheritAll="false" />
 		<ant antfile="../lams_tool_chat/build.xml"          target="explode-war" inheritAll="false" />
 		<ant antfile="../lams_tool_daco/build.xml"          target="explode-war" inheritAll="false" />
+		<ant antfile="../lams_tool_doku/build.xml"          target="explode-war" inheritAll="false" />
 		<ant antfile="../lams_tool_forum/build.xml"         target="explode-war" inheritAll="false" />
 		<ant antfile="../lams_tool_gmap/build.xml"          target="explode-war" inheritAll="false" />
 		<ant antfile="../lams_tool_images/build.xml"        target="explode-war" inheritAll="false" />
